<resources>
    <string name="app_name">Project D Beta</string>
    <string name="label_no_data_found">No data found.</string>
    <string name="label_no_permission">Not have permission.</string>
    <string name="cd_icon_voice_email">cd_icon_voice_email</string>
    <string name="text_tilde">~</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="cd_icon_find_in_page">cd_icon_find_in_page</string>
    <string name="cd_prayer_reader_s_photo">prayer reader\'s photo</string>
    <string name="label_live">LIVE</string>
    <string name="cd_your_photo">your photo</string>
    <string name="button_like_prayer">button like prayer</string>
    <string name="button_play_prayer">button play_prayer</string>
    <string name="cd_image_menu">image menu</string>
    <string name="cd_photo_engineer">photo engineer</string>
    <string name="cd_button_more">button more</string>
    <string name="title_on_going_management">On-going Management</string>
    <string name="title_my_absent">My Absent</string>
    <string name="title_today_s_updates">Today\'s Updates</string>
    <string name="title_add_task">Add Task</string>
    <string name="button_save">Save</string>
    <string name="hint_task">Task</string>
    <string name="hint_project">Project</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="label_load">Load</string>
    <string name="rb_standby">Standby</string>
    <string name="rb_low">Low</string>
    <string name="rb_medium">Medium</string>
    <string name="rb_high">High</string>
    <string name="label_have_unfinished_task_last_day">Have unfinished task last day?</string>
    <string name="button_copy_task_here">Copy Task Here</string>
    <string name="title_today">Today</string>
    <string name="button_add_task">Add Task</string>
    <string name="title_tasks">Tasks</string>
    <string name="cd_image_no_data">image no data</string>
    <string name="cd_photo_user">photo user</string>
    <string name="title_today_s_task">Today\'s Task</string>
    <string name="hint_project_name">Project Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_project_director_pd">Project Director (PD)</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="rb_hard">Hard</string>
    <string name="title_project">Project</string>
    <string name="button_add_project">Add Project</string>
    <string name="title_today_s_check">Today\'s Check</string>
    <string name="cd_avatar_user">avatar user</string>
    <string name="label_submitted_absent">submitted absent.</string>
    <string name="title_absent">Absent</string>
    <string name="hint_describe_your_reason">Describe your reason...</string>
    <string name="button_submit">Submit</string>
    <string name="hint_search">Search...</string>
    <string name="title_choose_project">Choose Project</string>
    <string name="title_choose_task">Choose Task</string>
    <string name="label_how_about_this_task">How about this task?</string>
    <string name="rb_done">Done</string>
    <string name="rb_hold">Hold</string>
    <string name="rb_cancel">Cancel</string>
    <string name="hint_write_some_learning_by_this_task">Write some learning by this task...</string>
    <string name="button_update">Update</string>
    <string name="default_channel_id">ProjectD</string>
    <string name="please_update_engineer_timeline">*Please update engineer timeline</string>
    <string name="label_lestari_taman_media">Lestari Taman Media</string>
    <string name="hint_email">Email</string>
    <string name="label_auto_start">aktifkan %1$s mulai otomatis</string>
    <string name="label_backgroud_service">matikan pengoptimalan baterai</string>
    <string name="label_white_list">Jika notifikasi tidak muncul Anda bisa mencoba untuk %1$s</string>
</resources>