<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loading"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_12_white_top"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_absent"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_reason"
            style="@style/Theme.ProjectD.InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_describe_your_reason">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="@dimen/text_default" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Theme.ProjectD.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha='@{loading ? 0.5F : 1F}'
            android:clickable='@{loading ? false : true}'
            android:text="@string/button_submit"
            android:textSize="@dimen/text_default" />

    </LinearLayout>

</layout>