<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.project.list.ProjectFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_project"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_xlarge"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_project"
                style="@style/Theme.ProjectD.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/button_add_project"
                android:textAllCaps="false"
                android:textSize="@dimen/text_default" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_project"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingBottom="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="2"
                tools:itemCount="3"
                tools:listitem="@layout/item_project"/>

            <LinearLayout
                android:id="@+id/v_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_find_in_page_56"
                    app:tint="@color/brand_50"
                    android:contentDescription="@string/cd_image_no_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_no_data_found"
                    android:textColor="@color/brand_50"
                    android:textSize="@dimen/text_default" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</layout>